# UtterCraft

./: .gitignore  .gitmodules  CMakeLists.txt
sources/: main.cpp
sources/foundation/: abstraction.cpp  abstraction.hpp  application.cpp  application.hpp
